src/test/resources/amyc/parser/failing/ArgsError1.amy
object Args
  foo(bar, )
end Args
